--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Assignment 1</title>
 </head>
+
 <body>
-    
+    <header>
+        <section id="hero-holder">
+            <div class="hero">
+                <img src="/assets/Group.png" alt="Coding clipart">
+                <div class="hero-info ">
+                    <h1 class="heading">"In the near future, I hope to become a Developer."</h1>
+                    <p class="description"> Web development is the process of creating and maintaining websites,
+                        encompassing aspects like web design, web content development, client-side/server-side
+                        scripting, and network security configuration.</p>
+                    <button class="btn-primary">Contact with me</button>
+                </div>
+
+            </div>
+
+        </section>
+
+    </header>
+
+    <main>
+        <section class="why-dev">
+            <h2 class="subtittle">Why Web Development??</h2>
+            <p class="description">Web development enables the creation of dynamic, interactive, and functional websites
+                and applications that enhance user experiences and drive business growth.</p>
+            <div class="why-dev-big-box">
+                <div class="box">
+                    <div class="info-box">
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>Empowering innovation and transforming the future through code.</p>
+                        <button>Learn More</button>
+                    </div>
+                    <img src="/assets/Layer_1.png" alt="Layer_1">
+                </div>
+                <div class="box">
+                    <div class="info-box">
+                        <h3></h3>
+                        <p></p>
+                        <button></button>
+                    </div>
+                    <img src="" alt="">
+                </div>
+                <div class="box">
+                    <div class="info-box">
+                        <h3></h3>
+                        <p></p>
+                        <button></button>
+                    </div>
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
+
 </html>
