Added youtube video

--- a/index.html
+++ b/index.html
@@ -42,21 +42,29 @@
                     <img src="/assets/Layer_1.png" alt="Layer_1">
                 </div>
                 <div class="box">
+                    <img src="/assets/Group 3.png" alt="">
                     <div class="info-box">
-                        <h3></h3>
-                        <p></p>
-                        <button></button>
+                        <h3>I will help People by creating Modern Web System</h3>
+                        <p>Mordern world required mordern websites. So lets make it.</p>
+                        <button>Learn More</button>
                     </div>
-                    <img src="" alt="">
                 </div>
                 <div class="box">
                     <div class="info-box">
-                        <h3></h3>
-                        <p></p>
-                        <button></button>
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>Coding is the future of world. We must know coding and programming</p>
+                        <button>Learn More</button>
                     </div>
-                    <img src="" alt="">
+                    <img src="/assets/Group 4.png" alt="">
                 </div>
+            </div>
+        </section>
+
+        <section class="my-inspiration">
+            <h1>My Inspiration</h1>
+            <p>Jhankar Mahbub is my inspiration, Code with harry is also my inspiration.</p>
+            <div class="youtube-border">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5O5e0nnVulY?si=ml5VUmsLeC0X_bCK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
