Current target completed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <h1>My Inspiration</h1>
             <p>Jhankar Mahbub is my inspiration, Code with harry is also my inspiration.</p>
             <div class="youtube-border">
-                <iframe width="800" height="200" src="https://www.youtube.com/embed/5O5e0nnVulY?si=ml5VUmsLeC0X_bCK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="800" height="200" src="https://www.youtube.com/embed/5O5e0nnVulY?si=ml5VUmsLeC0X_bCK"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
 
@@ -73,31 +76,40 @@
             <p>I am now focusing on HTML, CSS and Javascript. Give me blessings.</p>
             <div class="card-holder">
 
-                <div class="card">
-                   <div>
-                    <img src="/assets/html.png" alt="html logo">
-                   </div>
-                    <h4>Html</h4>
-                    <p>Html Stands for Hyper Text Markup Language. It is the essential part for website.</p>
-                    <a href="">Learn More</a>
+                <div class="card html-bg">
+                    <div>
+                        <img src="/assets/html.png" alt="html logo">
+                    </div>
+                    <div class="card-info-holder">
+                        <h4>Html</h4>
+                        <p>Html Stands for Hyper Text Markup Language. It is the essential part for website.</p>
+                        <a href="">Learn More</a>
+                    </div>
+
                 </div>
-                <div class="card">
-                    
+                <div class="card css-bg">
+
                     <div><img src="/assets/css.png" alt="css logo"></div>
-                    <h4>CSS </h4>
-                    <p>Cascading Style Sheets is used to design a webpage.</p>
-                    <a href="">Learn More</a>
+                    <div class="card-info-holder">
+                        <h4>CSS </h4>
+                        <p>Cascading Style Sheets is used to design a webpage.</p>
+                        <a href="">Learn More</a>
+                    </div>
+
                 </div>
-                <div class="card">
+                <div class="card js-bg">
                     <div> <img src="/assets/js.png" alt="Javascript logo"></div>
-                    <h4>Javascript</h4>
-                    <p>It is a scripting language, which is used to run programs in a webpage</p>
-                    <a href="">Learn More</a>
+                    <div class="card-info-holder">
+                        <h4>Javascript</h4>
+                        <p>It is a scripting language, which is used to run programs in a webpage</p>
+                        <a href="">Learn More</a>
+                    </div>
+
                 </div>
 
 
             </div>
-            
+
         </section>
     </main>
 
