--- a/index.html
+++ b/index.html
@@ -111,7 +111,32 @@
             </div>
 
         </section>
+
     </main>
+    <footer >
+        <section class="display-align">
+            <div class="support-class">
+                <h3>I Need Support</h3>
+                <p>I need proper guidance, Help me</p>
+                <div class="search">
+                    <input type="text"><input type="button" value="Submit">
+                </div>
+            </div>
+        </section>
+
+        <section class="challenge-bar">
+            <div class="info">
+                <h4>All Right Reserved by Ashib Ullah</h3>
+            </div>
+            <div class="icons">
+                <a href="https://www.facebook.com/AshibUllahBhai/" target="_blank"><img src="/assets/facebook.png" alt=""></a>
+                <a href="https://github.com/ashibullah" target="_blank"><img src="/assets/github.png" alt=""></a>
+                <a href="https://bd.linkedin.com/in/ashib-ullah-355499210" target="_blank"><img src="/assets/linkedin-icon 1.png" alt=""></a>
+            </div>
+
+        </section>
+
+    </footer>
 
 </body>
 
