--- a/index.html
+++ b/index.html
@@ -35,25 +35,28 @@
             <div class="why-dev-big-box">
                 <div class="box">
                     <div class="info-box">
-                        <h3>I will Do Coding and Change The World</h3>
+                        <h3 class="why-heading">I will Do Coding and Change The World</h3>
+                        <br>
                         <p>Empowering innovation and transforming the future through code.</p>
-                        <button>Learn More</button>
+                        <button class="card-btn">Learn More</button>
                     </div>
                     <img src="/assets/Layer_1.png" alt="Layer_1">
                 </div>
                 <div class="box">
                     <img src="/assets/Group 3.png" alt="">
-                    <div class="info-box">
-                        <h3>I will help People by creating Modern Web System</h3>
+                    <div class="info-box right-align">
+                        <h3 class="why-heading">I will help People by creating Modern Web System</h3>
+                        <br>
                         <p>Mordern world required mordern websites. So lets make it.</p>
-                        <button>Learn More</button>
+                        <button class="card-btn">Learn More</button>
                     </div>
                 </div>
                 <div class="box">
                     <div class="info-box">
-                        <h3>I will Do Coding and Change The World</h3>
+                        <h3 class="why-heading">I will Do Coding and Change The World</h3>
+                        <br>
                         <p>Coding is the future of world. We must know coding and programming</p>
-                        <button>Learn More</button>
+                        <button class="card-btn">Learn More</button>
                     </div>
                     <img src="/assets/Group 4.png" alt="">
                 </div>
@@ -61,7 +64,7 @@
         </section>
 
         <section class="my-inspiration">
-            <h1>My Inspiration</h1>
+            <h2>My Inspiration</h1>
             <p>Jhankar Mahbub is my inspiration, Code with harry is also my inspiration.</p>
             <div class="youtube-border">
                 <iframe width="800" height="200" src="https://www.youtube.com/embed/5O5e0nnVulY?si=ml5VUmsLeC0X_bCK"
@@ -71,8 +74,8 @@
             </div>
         </section>
 
-        <section class="my-current-target">
-            <h1>My Current Target</h1>
+        <section class="my-current-target ">
+            <h2>My Current Target</h1>
             <p>I am now focusing on HTML, CSS and Javascript. Give me blessings.</p>
             <div class="card-holder">
 
@@ -116,10 +119,10 @@
     <footer >
         <section class="display-align">
             <div class="support-class">
-                <h3>I Need Support</h3>
+                <h2>I Need Support</h3>
                 <p>I need proper guidance, Help me</p>
                 <div class="search">
-                    <input type="text"><input type="button" value="Submit">
+                    <input  class="footer-search" type="text" placeholder="Suggest me any feedback for me"><input class="footer-submit" type="button" value="Submit">
                 </div>
             </div>
         </section>
