Picture problem solved?

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         <p>Empowering innovation and transforming the future through code.</p>
                         <button class="card-btn">Learn More</button>
                     </div>
-                    <img src="/assets/Layer_1.png" alt="Layer_1">
+                    <img src="assets/Layer_1.png" alt="Layer_1">
                 </div>
                 <div class="box">
-                    <img src="/assets/Group 3.png" alt="">
+                    <img src="assets/Group 3.png" alt="">
                     <div class="info-box right-align">
                         <h3 class="why-heading">I will help People by creating Modern Web System</h3>
                         <br>
@@ -58,7 +58,7 @@
                         <p>Coding is the future of world. We must know coding and programming</p>
                         <button class="card-btn">Learn More</button>
                     </div>
-                    <img src="/assets/Group 4.png" alt="">
+                    <img src="assets/Group 4.png" alt="">
                 </div>
             </div>
         </section>
@@ -81,7 +81,7 @@
 
                 <div class="card html-bg">
                     <div>
-                        <img src="/assets/html.png" alt="html logo">
+                        <img src="assets/html.png" alt="html logo">
                     </div>
                     <div class="card-info-holder">
                         <h4>Html</h4>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="card css-bg">
 
-                    <div><img src="/assets/css.png" alt="css logo"></div>
+                    <div><img src="assets/css.png" alt="css logo"></div>
                     <div class="card-info-holder">
                         <h4>CSS </h4>
                         <p>Cascading Style Sheets is used to design a webpage.</p>
@@ -101,7 +101,7 @@
 
                 </div>
                 <div class="card js-bg">
-                    <div> <img src="/assets/js.png" alt="Javascript logo"></div>
+                    <div> <img src="assets/js.png" alt="Javascript logo"></div>
                     <div class="card-info-holder">
                         <h4>Javascript</h4>
                         <p>It is a scripting language, which is used to run programs in a webpage</p>
@@ -132,9 +132,9 @@
                 <h4>All Right Reserved by Ashib Ullah</h3>
             </div>
             <div class="icons">
-                <a href="https://www.facebook.com/AshibUllahBhai/" target="_blank"><img src="/assets/facebook.png" alt=""></a>
-                <a href="https://github.com/ashibullah" target="_blank"><img src="/assets/github.png" alt=""></a>
-                <a href="https://bd.linkedin.com/in/ashib-ullah-355499210" target="_blank"><img src="/assets/linkedin-icon 1.png" alt=""></a>
+                <a href="https://www.facebook.com/AshibUllahBhai/" target="_blank"><img src="assets/facebook.png" alt=""></a>
+                <a href="https://github.com/ashibullah" target="_blank"><img src="assets/github.png" alt=""></a>
+                <a href="https://bd.linkedin.com/in/ashib-ullah-355499210" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a>
             </div>
 
         </section>
