--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <section id="hero-holder">
             <div class="hero">
-                <img src="/assets/Group.png" alt="Coding clipart">
+                <img src="assets/Group.png" alt="Coding clipart">
                 <div class="hero-info ">
                     <h1 class="heading">"In the near future, I hope to become a Developer."</h1>
                     <p class="description"> Web development is the process of creating and maintaining websites,
