--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                     <p class="description"> Web development is the process of creating and maintaining websites,
                         encompassing aspects like web design, web content development, client-side/server-side
                         scripting, and network security configuration.</p>
-                    <button class="btn-primary">Contact with me</button>
+                        <button class="btn-primary">
+                            <a href="#footer-section" style="color: white;">Contact with me</a>
+                        </button>
                 </div>
 
             </div>
@@ -116,7 +118,7 @@
         </section>
 
     </main>
-    <footer >
+    <footer id="footer-section" >
         <section class="display-align">
             <div class="support-class">
                 <h2>I Need Support</h3>
